Remove fixed height from textfields
Firefox enforces the padding, causing the text to be clipped.

--- a/sites/all/themes/orwell/css/orwell.main.css
+++ b/sites/all/themes/orwell/css/orwell.main.css
@@ -167,7 +167,6 @@ img {
 .pane-user-login select {
   background: white;
   border: 1px solid #d5d5d5;
-  height: 41px;
   width: 100%;
   font-size: 13px;
   padding: 10px 30px;
@@ -187,7 +186,6 @@ img {
   min-width: 250px;
   display: inline-block;
   position: relative;
-  height: 41px;
   border: 1px solid #d5d5d5;
   color: black;
   font-size: 15.4px;
@@ -195,7 +193,7 @@ img {
   width: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 10px 30px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -249,7 +247,6 @@ img {
 .ui-dialog form select {
   background: white;
   border: 1px solid #d5d5d5;
-  height: 41px;
   width: 100%;
   font-size: 13px;
   padding: 10px 30px;
@@ -269,7 +266,6 @@ img {
   min-width: 250px;
   display: inline-block;
   position: relative;
-  height: 41px;
   border: 1px solid #d5d5d5;
   color: black;
   font-size: 15.4px;
@@ -277,7 +273,7 @@ img {
   width: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 10px 30px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -3575,7 +3571,6 @@ html.js input.form-autocomplete {
 .pane-profile2-form select {
   background: white;
   border: 1px solid #d5d5d5;
-  height: 41px;
   width: 100%;
   font-size: 13px;
   padding: 10px 30px;
@@ -3595,7 +3590,6 @@ html.js input.form-autocomplete {
   min-width: 250px;
   display: inline-block;
   position: relative;
-  height: 41px;
   border: 1px solid #d5d5d5;
   color: black;
   font-size: 15.4px;
@@ -3603,7 +3597,7 @@ html.js input.form-autocomplete {
   width: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 10px 30px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -3653,7 +3647,6 @@ html.js input.form-autocomplete {
 .page-user-bookmarks select {
   background: white;
   border: 1px solid #d5d5d5;
-  height: 41px;
   width: 100%;
   font-size: 13px;
   padding: 10px 30px;
@@ -3673,7 +3666,6 @@ html.js input.form-autocomplete {
   min-width: 250px;
   display: inline-block;
   position: relative;
-  height: 41px;
   border: 1px solid #d5d5d5;
   color: black;
   font-size: 15.4px;
@@ -3681,7 +3673,7 @@ html.js input.form-autocomplete {
   width: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 10px 30px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -4619,7 +4611,6 @@ html.js input.form-autocomplete {
 .node-webform select {
   background: white;
   border: 1px solid #d5d5d5;
-  height: 41px;
   width: 100%;
   font-size: 13px;
   padding: 10px 30px;
@@ -4639,7 +4630,6 @@ html.js input.form-autocomplete {
   min-width: 250px;
   display: inline-block;
   position: relative;
-  height: 41px;
   border: 1px solid #d5d5d5;
   color: black;
   font-size: 15.4px;
@@ -4647,7 +4637,7 @@ html.js input.form-autocomplete {
   width: 100%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 10px 30px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
